--- a/ejercicios/clase_04/blog_django/applications/blog/templates/list.html
+++ b/ejercicios/clase_04/blog_django/applications/blog/templates/list.html
@@ -10,11 +10,11 @@
       <header>
         <div>
           <h1>
-              <a href="{{ url_for('blog.blog_detail', post_id=post.id) }}">
-                  {{ post['title'] }}
+              <a href="{% url 'blog:blog_detail' post_id=post.id %}">
+                  {{ post.title }}
               </a>
           </h1>
-          <div class="about">by {{ post.username }} on {{ post.pub_date.strftime('%Y-%m-%d') }}</div>
+          <div class="about">by {{ post.username }} on {{ post.pub_date|date:'Y-m-d' }}</div>
         </div>
       </header>
       <p class="body">{{ post.body }}</p>
@@ -23,6 +23,6 @@
       <hr>
     {% endif %}
  {% endfor %}
-<a href="{{ url_for('blog.blog_create') }}">Create</a>
+<a href="{% url  'blog:blog_create' %}">Create</a>
 
 {% endblock %}
