--- a/ejercicios/clase_04/blog_flask/blog/applications/blog/templates/detail.html
+++ b/ejercicios/clase_04/blog_flask/blog/applications/blog/templates/detail.html
@@ -1,28 +1,20 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>Posts</h1>
+  <h1>Post</h1>
 {% endblock %}
 
 {% block content %}
-    {% for post in posts %}
+
     <article class="post">
       <header>
         <div>
-          <h1>
-              <a href="{{ url_for('blog.blog_detail', post_id=post.id) }}">
-                  {{ post['title'] }}
-              </a>
-          </h1>
+          <h1>{{ post.title }}</h1>
           <div class="about">by {{ post.username }} on {{ post.pub_date.strftime('%Y-%m-%d') }}</div>
         </div>
       </header>
       <p class="body">{{ post.body }}</p>
     </article>
-    {% if not loop.last %}
-      <hr>
-    {% endif %}
- {% endfor %}
-<a href="{{ url_for('blog.blog_create') }}">Create</a>
+
 
 {% endblock %}
