--- a/ejercicios/clase_04/blog_django/applications/blog/templates/detail.html
+++ b/ejercicios/clase_04/blog_django/applications/blog/templates/detail.html
@@ -15,6 +15,8 @@
       </header>
       <p class="body">{{ post.body }}</p>
     </article>
+    <a href="{% url "blog:blog_update" post.id %}">Update</a>
+    <a href="{% url "blog:blog_delete" post.id %}">Delete</a>
 
 
 {% endblock %}
