--- a/ejercicios/clase_04/blog_flask/blog/applications/blog/templates/detail.html
+++ b/ejercicios/clase_04/blog_flask/blog/applications/blog/templates/detail.html
@@ -15,6 +15,8 @@
       </header>
       <p class="body">{{ post.body }}</p>
     </article>
+    <a href="{{ url_for('blog.blog_update', post_id=post.id) }}">Update</a>
+    <a href="{{ url_for('blog.blog_delete', post_id=post.id) }}">Delete</a>
 
 
 {% endblock %}
