changed styles for devhack

--- a/themes/remark/templates/index.html
+++ b/themes/remark/templates/index.html
@@ -4,7 +4,9 @@
 {% block content_title %}
 <h2>All articles</h2>
 {% endblock %}
-
+<h1>
+    Curso Python Devhack
+</h1>
 <ol id="post-list">
 {% for article in articles_page.object_list %}
         <li><article class="hentry">
