--- a/themes/remark/static/css/custom_page.css
+++ b/themes/remark/static/css/custom_page.css
@@ -4,6 +4,7 @@ html
     width: 100%;
 }
 
+
 body
 {
     height: 100%;
@@ -51,7 +52,7 @@ body
 
 #container_logo
 {
-    background-image: url('../img/logo_learn_negro.png');
+    background-image: url('../img/logo.png');
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
