removed project and modified content from class 4

--- a/ejercicios/clase_04/blog_django/applications/blog/templates/list.html
+++ b/ejercicios/clase_04/blog_django/applications/blog/templates/list.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+    La cantidad de post es {{ posts|length }}
     {% for post in posts %}
     <article class="post">
       <header>
